2004-12-07  Christian Fredrik Kalager Schaller  <uraeus@gnome.org>

	* gst/monoscope/README: Update information to be more correct
	* gst/monoscope/convolve.c: Relicense to LGPL
	* gst/monoscope/convolve.h: Relicense to LGPL

2004-12-06  Arwed v. Merkatz <v.merkatz@gmx.net>

	* gst/mpegaudioparse/gstmpegaudioparse.c: (gst_mp3parse_chain):
	  set BUFFER_DURATION to correct values (mpeg1 audio frame length is fixed)
	* gst/matroska/matroska-mux.c: (gst_matroska_mux_audio_pad_link):
	  set default_duration for mpeg1 audio

2004-12-06  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* ext/alsa/gstalsa.c: (gst_alsa_get_caps), (gst_alsa_close_audio):
	* ext/alsa/gstalsa.h:
	  refactor big chunks of the core caps negotiation code to make it
	  a lot faster, because people claim it's really slow
	  (actually, just cache the getcaps when the device is opened)

2004-12-06  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/a52dec/gsta52dec.c: (gst_a52dec_init),
	(gst_a52dec_handle_event), (gst_a52dec_update_streaminfo),
	(gst_a52dec_handle_frame), (gst_a52dec_chain),
	(gst_a52dec_change_state), (plugin_init):
	* ext/a52dec/gsta52dec.h:
	  Do something useful with timestamps. Make chain-based (since
	  there's really no reason to be loopbased).
	* gst/avi/gstavidemux.c: (gst_avi_demux_process_next_entry):
	  Update current_byte/frame correctly.

2004-12-04  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/apetag/apedemux.c: (gst_ape_demux_parse_tags),
	(gst_ape_demux_stream_init):
	  Forward tags, too.

2004-12-04  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/apetag/apedemux.c: (gst_ape_demux_stream_init):
	  Let's make sure we're done typefinding when detecting tags.

2004-12-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/matroska/ebml-read.c: (gst_ebml_read_class_init),
	(gst_ebml_read_init), (gst_ebml_read_use_event),
	(gst_ebml_read_element_id), (gst_ebml_peek_id),
	(gst_ebml_read_seek), (gst_ebml_read_skip),