@@ -3,9 +3,7 @@ alsaplayer.
 
 The monoscope convolution matching code was written by Ralph Loader.
 
-The monoscope.c and monoscope.h files are the only ones under the GPL,
-as opposed to the LGPL. We need to either rewrite these or get permission
-from the people involved to do so.
+The monoscope.c and monoscope.h files are under the BSD license (without advertising clause). 
 
 This implementation is taken from alsaplayer version 0.99.54, at
 http://www.alsaplayer.org/
